[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/Red_Hood_idleH-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/States/Run.gd" type="Script" id=3]
[ext_resource path="res://Assets/Player/States/Idle.gd" type="Script" id=4]
[ext_resource path="res://Assets/Player/States/Air.gd" type="Script" id=5]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=6]
[ext_resource path="res://Assets/Player/States/Move.gd" type="Script" id=7]
[ext_resource path="res://Assets/Player/slash_try_2-Sheet.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player/Red_Hood_side_runningsheet.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player/PlayerAttack.tres" type="Animation" id=10]
[ext_resource path="res://Assets/Player/States/Damage.gd" type="Script" id=11]
[ext_resource path="res://Assets/Player/Red_Hood_Dead.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player/Red_Hood_hurt.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player/Dash.gd" type="Script" id=14]
[ext_resource path="res://Assets/Player/Red_Hood_Roll-Sheet.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player/Red_Hood_Jumpup-Sheet.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player/Red_Hood_Jumpdown-Sheet.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 6.5 )

[sub_resource type="Animation" id=7]
resource_name = "Dash"
length = 0.1
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Dash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 5, 6, 5, 6 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Fall"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Fall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jump"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Jump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Run:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Run:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Idle:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Dash:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Jump:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Fall:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.5
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.11567, 7.61269 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3.9878, 7.4828 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 9
script = ExtResource( 1 )

[node name="Idle" type="Sprite" parent="."]
pause_mode = 2
texture = ExtResource( 2 )
hframes = 6

[node name="Run" type="Sprite" parent="."]
visible = false
position = Vector2( -2, 0 )
texture = ExtResource( 9 )
hframes = 6

[node name="Hurt" type="Sprite" parent="."]
visible = false
texture = ExtResource( 13 )

[node name="Death" type="Sprite" parent="."]
visible = false
texture = ExtResource( 12 )

[node name="Dash" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -2 )
texture = ExtResource( 15 )
hframes = 7

[node name="Jump" type="Sprite" parent="."]
visible = false
position = Vector2( -2, 1 )
texture = ExtResource( 16 )
hframes = 3

[node name="Fall" type="Sprite" parent="."]
visible = false
position = Vector2( -2, 0 )
texture = ExtResource( 17 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="Attack" type="Sprite" parent="."]
visible = false
position = Vector2( 10, 0 )
texture = ExtResource( 8 )
hframes = 4

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 4 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 3 )

[node name="Damage" type="Node" parent="StateMachine/Move"]
script = ExtResource( 11 )

[node name="Dash" type="Node" parent="StateMachine/Move"]
script = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Dash = SubResource( 7 )
anims/Fall = SubResource( 9 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 8 )
anims/RESET = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="AttackAnimPlayer" type="AnimationPlayer" parent="."]
anims/Attack = ExtResource( 10 )

[node name="Hitbox" type="Area2D" parent="." groups=["Attack"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 11.1402, -0.407049 )
shape = SubResource( 5 )
disabled = true

[node name="EnemyDetector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.611765, 1, 0.290196, 1 )
position = Vector2( 0.0121976, 1.5172 )
shape = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="EnemyDetector" to="StateMachine/Move" method="_on_EnemyDetector_body_entered"]
